add new homepage

--- a/en.html
+++ b/en.html
@@ -219,11 +219,11 @@
 								</tr>
 								<tr>
 									<th>Phone:</th>
-									<td>0033 6 19 50 69 98</td>
+									<td>0086 186 3094 0506</td>
 								</tr>
 								<tr>
 									<th>Address:</th>
-									<td>Room 602, Door No.1, Building No.38, Zi Rui Yuan, ChengWang Road, Tianjin City</td>
+									<td>Zi Rui Yuan, ChengWang Road, Tianjin City</td>
 								</tr>
 								<tr>
 									<th>Post code:</th>
