--- a/fr.html
+++ b/fr.html
@@ -220,11 +220,11 @@
 								</tr>
 								<tr>
 									<th>Phone:</th>
-									<td>0033 6 19 50 69 98</td>
+									<td>0086 186 3094 0506</td>
 								</tr>
 								<tr>
 									<th>Adresse:</th>
-									<td>Chambre 602, porte N°1, bâtiment N° 38, Zi Rui Yuan, Rue Chengwang, Tianjin, Chine</td>
+									<td>Zi Rui Yuan, Rue Chengwang, Tianjin, Chine</td>
 								</tr>
 								<tr>
 									<th>Code postal:</th>
