--- a/cn.html
+++ b/cn.html
@@ -6,6 +6,9 @@
 		<link href="./web/css/style.css" rel="stylesheet" type="text/css" media="all" />
 		<script src="./web/js/jquery.js" type="text/javascript"></script>
 		<script src="./web/js/jquery.anchor.js" type="text/javascript"></script>
+	
+		<!-- qq static -->
+		<script type="text/javascript" src="http://tajs.qq.com/stats?sId=29219272" charset="UTF-8"></script>
 		<script language="JavaScript" type="text/javascript">
 			var chn;
 			
