--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+	
+	<!-- qq static -->
+	<script type="text/javascript" src="http://tajs.qq.com/stats?sId=29219272" charset="UTF-8"></script>
+				
   </head>
   <body>
   	<div id="head">
