--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ò¦Â·öÎ</title>
+    <title>å§šè·¯é‘«</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <!-- Bootstrap -->
     <link href="./web/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="./web/css/main.css" rel="stylesheet">
@@ -26,7 +27,7 @@
 	    			Welcome
 	    		</div>
 	  			<div class="col-md-4 pull-right text-right head-t2">
-					Ò¦Â·öÎ <img alt="" src="./web/image/me.png" style="height: 40px;">
+					å§šè·¯é‘« <img alt="" src="./web/image/me.png" style="height: 40px;">
 				</div>
 	  		</div>
 	  	</div>
@@ -41,14 +42,14 @@
 				  			<div class="col-md-6 block">
 				  				<a href="cn.html" target="_blank">
 				  				<span class="block-c block-blue1 t-36">
-				    				¼òÀú
+				    				ç®€åŽ†
 				    			</span>
 				    			</a>
 				    		</div>
 				  			<div class="col-md-6 block">
 				  				<a href="#" target="_blank" data-toggle="modal" data-target="#myModal">
 					  				<span class="block-c block-red t-36">
-					    				Ê±¼äÖá
+					    				æ—¶é—´æŠ½
 					    			</span>
 				    			</a>
 				    		</div>
@@ -73,7 +74,7 @@
 				  				<a target="_blank" href="http://www.weibo.com/ylxeluxi">
 					  				<span class="block-c text-center block-green">
 					    				<img src="./web/image/s/weibo.png">
-				    					<span class="t-18">ÐÂÀËÎ¢²©</span>
+				    					<span class="t-18">æ–°æµªå¾®åš</span>
 					    			</span>
 				    			</a>
 							</div>
@@ -81,7 +82,7 @@
 				  				<a target="_blank" href="http://www.renren.com/yaoluxin">
 					  				<span class="block-c text-center block-blue2">
 					    				<img src="./web/image/s/renren.png">
-				    					<span class="t-18">ÈËÈËÍø</span>
+				    					<span class="t-18">äººäººç½‘</span>
 				    				</span>
 				    			</a>
 							</div>
