--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>姚路鑫</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>姚路鑫</title>
     <!-- Bootstrap -->
     <link href="./web/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="./web/css/main.css" rel="stylesheet">
@@ -47,9 +47,9 @@
 				    			</a>
 				    		</div>
 				  			<div class="col-md-6 block">
-				  				<a href="#" target="_blank" data-toggle="modal" data-target="#myModal">
+				  				<a href="timeliner.html" target="_blank" >
 					  				<span class="block-c block-red t-36">
-					    				时间抽
+					    				时间轴
 					    			</span>
 				    			</a>
 				    		</div>
