--- a/timeliner.html
+++ b/timeliner.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1>姚路鑫</h1>
+		<h1 id="name">姚路鑫</h1>
 		<h2>1985-2013</h2>
 
 		<div id="timelineContainer">
@@ -330,6 +330,14 @@
 		
 	</div><!-- /.container -->
 
+		<div id="back-to-top">
+			<a href="index.html" title="回到首页">
+				<img alt="" src="./web/image/arrow-left.png">
+			</a>
+			<a href="#name" title="回到顶部">
+				<img alt="" src="./web/image/arrow-up.png">
+			</a>
+		</div>
 	<!-- GLOBAL CORE SCRIPTS -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script type="text/javascript" src="./timeline/inc/colorbox.js"></script>
