--- a/cn.html
+++ b/cn.html
@@ -6,6 +6,8 @@
 		<link href="./web/css/style.css" rel="stylesheet" type="text/css" media="all" />
 		<script src="./web/js/jquery.js" type="text/javascript"></script>
 		<script src="./web/js/jquery.anchor.js" type="text/javascript"></script>
+		
+		<link href="favicon.ico" type="image/x-icon" rel="shortcut icon">
 	
 		<!-- qq static -->
 		<script type="text/javascript" src="http://tajs.qq.com/stats?sId=29219272" charset="UTF-8"></script>
@@ -321,17 +323,18 @@
 				var a_h = $('#about').height();
 				$('#aboutlft').height(a_h);
 
-				var a_h = $('#skills').height();
-				$('#skillslft').height(a_h);
+				var s_h = $('#skills').height();
+				$('#skillslft').height(s_h);
 
-				var a_h = $('#edu').height();
-				$('#edulft').height(a_h);
+				var e_h = $('#edu').height();
+				$('#edulft').height(e_h);
+				console.log(e_h);
 
-				var a_h = $('#exp').height();
-				$('#explft').height(a_h);
+				var x_h = $('#exp').height();
+				$('#explft').height(x_h);
 
-				var a_h = $('#reference').height();
-				$('#referencelft').height(a_h);
+				var r_h = $('#reference').height();
+				$('#referencelft').height(r_h);
 			});
 		</script>
 	</body>
