--- a/timeliner.html
+++ b/timeliner.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="./timeline/css/screen.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="./timeline/css/responsive.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="./timeline/inc/colorbox.css" type="text/css" media="screen">
+		<link href="favicon.ico" type="image/x-icon" rel="shortcut icon">
 </head>
 <body>
 	<div class="container">
@@ -339,7 +340,7 @@
 			</a>
 		</div>
 	<!-- GLOBAL CORE SCRIPTS -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
 	<script type="text/javascript" src="./timeline/inc/colorbox.js"></script>
 	<script type="text/javascript" src="./timeline/js/timeliner.js"></script>
 	<script>
