--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Bootstrap -->
     <link href="./web/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="./web/css/main.css" rel="stylesheet">
+		<link href="favicon.ico" type="image/x-icon" rel="shortcut icon">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
